--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 curl_cffi==0.5.9
-websockets==12.0certifi==2024.2.2
-cffi==1.16.0
-curl_cffi==0.6.2
+websockets==12.0
+certifi==2024.2.2
+cffi
+curl_cffi
 pycparser==2.22
 websockets==12.0
