Add commented configuration template

--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -1,3 +1,9 @@
+# Sample configuration for re_gpt.
+# Copy this file to config.ini and replace the placeholders with your own values.
+
 [session]
-token = __Secure-next-auth.session-token here
-conversation_id =
+# Authentication token from your ChatGPT account cookies.
+token = YOUR_SESSION_TOKEN
+# ID of a previous conversation to resume; leave placeholder to start a new one.
+conversation_id = YOUR_CONVERSATION_ID
+
