Add helper for loading ChatGPT session token

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,5 +1,6 @@
 # Sample configuration for re_gpt.
 # Copy this file to config.ini and replace the placeholders with your own values.
+# Alternatively, you can store your session token in a ~/.chatgpt_session file.
 
 [session]
 # Authentication token from your ChatGPT account cookies.
