--- a/config.example.ini
+++ b/config.example.ini
@@ -7,4 +7,10 @@
 token = YOUR_SESSION_TOKEN
 # ID of a previous conversation to resume; leave placeholder to start a new one.
 conversation_id = YOUR_CONVERSATION_ID
-
+# Default model slug for new conversations (optional).
+model = YOUR_MODEL_SLUG
+# Timezone label and offset for chat payloads (optional).
+timezone = YOUR_TIMEZONE
+timezone_offset_min = YOUR_TIMEZONE_OFFSET_MIN
+# User agent override for HTTP requests (optional).
+user_agent = YOUR_USER_AGENT
